Fix for Bug 4473 - Recent comments view for the OPAC
- modifies opac-showreviews.pl to display recent comments for all
  titles, sorted in descending order by date.
- includes RSS feed
- includes (thanks to Chris N.):

[Enhancement][3.4] Add RFC822 Format to C4::Dates

This patch adds RFC822 formatting to C4::Dates. It also updates Dates.t
appropriately. Consult the POD for this module for how to use
this format.

Please note that this module *does not* handle TZ conversion at this point.
This means that the TZ portion of a RFC822 time will be truncated and the converted
time will be in the same TZ as was passed in. When generating an RFC822 time,
the local TZ offset will be included since none of the other supported formats
provide a means for including their TZ. This is not a problem introduced by the
addition of RFC822 formatting. Rather it is due to this module not having TZ
support to begin with.

Also note that the dow, moy abbreviations are English as required by
RFC822 section 3.3 (thanks to self for pointing that out).

--- a/koha-tmpl/opac-tmpl/prog/en/css/opac.css
+++ b/koha-tmpl/opac-tmpl/prog/en/css/opac.css
@@ -1021,8 +1021,7 @@ a.cancel {
 
 .searchresults p {
 	margin: 0;
-	padding: 0;
-	padding-top : .6em;
+	padding: 0 0 .6em 0;
 }
 
 td.resultscontrol img {
@@ -1969,4 +1968,29 @@ div.ft {
 	font-size:90%;
 	list-style:disc outside url("../../images/item-bullet.gif");
 	padding:0.2em 0;
+}
+
+#recentcomments {
+	margin:auto;
+	max-width:750px;
+}
+
+.searchresults .commentline {
+	background-color : rgb(255, 255, 204);
+	background-color : rgba(255, 255, 204, 0.4);
+	border : 1px solid #CCC;
+	display: inline-block;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+	-webkit-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
+	-moz-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
+	box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
+	margin : .3em;
+	padding : .4em;
+}
+
+.searchresults .commentline.yours {
+	background-color : rgb(239, 254, 213);
+	background-color : rgba(239, 254, 213, 0.4);
 }
